tests/ui/self/arbitrary_self_types_pointer.stderr
error[E0307]: invalid `self` parameter type: *const A
  --> $DIR/arbitrary_self_types_pointer.rs:6:16
   |
LL |     fn m(self: *const Self) {}
   |                ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error[E0307]: invalid `self` parameter type: *const Self
  --> $DIR/arbitrary_self_types_pointer.rs:11:17
   |
LL |     fn bm(self: *const Self) {}
   |                 ^^^^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing Receiver
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver`: for example `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`). Raw pointers do not implement Receiver. Consider wrapping your pointer in a newtype wrapper for which you implement Receiver.

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0307`.
